@@ -1,5 +1,7 @@
 2000-09-06  Kazu Hirata  <kazu@hxi.com>
 
+	* config/tc-hppa.c: Fix formatting.
+
 	* ecoff.c: Fix formatting.
 
 2000-09-06  Alexandre Oliva  <aoliva@redhat.com>
